--- a/EureukaServer/src/main/resources/application.properties
+++ b/EureukaServer/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=eureka
 server.port=8761
+
+#emplacement image docker // http://nom image docker...........
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#false pour interdire l enregistrement au niveau de serveur
 eureka.client.register-with-eureka=false
+
+#false pour interdire la recherche et decouverte
 eureka.client.fetch-registry=false
+logging.level.com.netflix.eureka=DEBUG
