--- a/AmiraWeb/pom.xml
+++ b/AmiraWeb/pom.xml
@@ -27,6 +27,21 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
+        <dependency>
+
+
+            <groupId>org.springdoc</groupId>
+
+
+            <artifactId>springdoc-openapi-ui</artifactId>
+
+
+            <version>1.6.9</version>
+
+
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
