--- a/ChaimaRendezVous/src/main/resources/application.properties
+++ b/ChaimaRendezVous/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-
-server.address=0.0.0.0
+#server.address=0.0.0.0
 spring.application.name=chaimaweb
-eureka.client.serviceUrl.defaultzone= http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #eureka.client.serviceUrl.defaultzone= http://192.168.1.1:8761/eureka/
-##server.port=8099
-server.port=0
+server.port=8099
+#server.port=0
 server.servlet.context-path=/pethealth/chaimaweb
 
 spring.main.banner-mode=off
 
-spring.datasource.url=jdbc:mysql://localhost:3306/chaimaweb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ##s#
@@ -17,9 +15,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+spring.jpa.hibernate.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 ### Eureka configuration ###
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.cloud.config.import-check.enabled=false
 spring.cloud.config.fail-fast=true
@@ -27,3 +27,16 @@ spring.cloud.config.fail-fast=true
 
 
 
+
+### Database ###
+spring.datasource.url=jdbc:mysql://localhost:3306/chaimaweb?autoReconnect=true&useSSL=false
+
+
+### JPA / HIBERNATE ###
+
+## LOGGING ##
+##Logging pattern for the console ##
+logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{45} - %msg %n
+
+
+spring.cloud.config.enabled=false
