--- a/userms/src/main/resources/application.properties
+++ b/userms/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=userms
 #server.address=0.0.0.0
 #server.port=0
-server.port=8084
+server.port=8091
 server.servlet.context-path=/pethealth/userms
 
 
 ### Eureka configuration ###
 
-#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 ##eureka.client.serviceUrl.defaultZone= http://lasteureka:8761/eureka/
-#eureka.client.register-with-eureka=true
-#spring.cloud.config.import-check.enabled=false
+eureka.client.register-with-eureka=true
+spring.cloud.config.import-check.enabled=false
 ###spring.cloud.config.fail-fast=true
 
 
@@ -29,7 +29,7 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #spring.cloud.config.import-check.enabled=false
 #spring.cloud.config.fail-fast=true
-
+spring.cloud.config.enabled=false
 #mailing config
 spring.security.oauth2.client.registration.google.client-id=659466729398-d3o6etbrlk7h5i2nqs22o0uemlg0maqq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
