--- a/Adoption/pom.xml
+++ b/Adoption/pom.xml
@@ -30,7 +30,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!--
+
          <dependency>
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-starter-config</artifactId>
@@ -40,7 +40,7 @@
                     <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 </dependency>
 
-        -->
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -68,7 +68,7 @@
 		</dependency>
 	</dependencies>
 
-<!--
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -80,7 +80,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
--->
+
 	<build>
 		<plugins>
 			<plugin>
@@ -96,5 +96,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-docker</finalName>
 	</build>
 </project>
