--- a/Adoption/src/main/resources/application.properties
+++ b/Adoption/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 #server.address=0.0.0.0
 spring.application.name=adoption-service
-#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 #eureka.client.serviceUrl.defaultzone= http://192.168.43.217:8761/eureka/
 server.port=8090
 server.servlet.context-path=/pethealth/adoption-service
 spring.main.banner-mode=off
+
+eureka.client.register-with-eureka=true
+
+spring.cloud.config.import-check.enabled=false
+spring.cloud.config.fail-fast=true
+
+
 
 
 #DB H2
@@ -16,7 +23,6 @@ spring.datasource.password=
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
-
 
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
